...
        cellImage.kf.cancelDownloadTask()
        cellImage.contentMode = .center
    }
    
    func setIsLiked(_ isLiked: Bool) {
        let likeImage = isLiked ? UIImage(named: "like_button_on") : UIImage(named: "like_button_off")
        let identifier = isLiked ? "LikeButtonOn" : "LikeButtonOff"
        likeButton.setImage(likeImage, for: .normal)
        likeButton.accessibilityIdentifier = identifier
    }
    
    @IBAction private func likeAction() {
        delegate?.imageListCellDidTapLike(self)
...
