...
    }()
    
    private let loginButton: UIButton = {
        let button = UIButton(type: .system)
        button.addTarget(self, action: #selector(Self.didTapLoginButton), for: .touchUpInside)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.accessibilityIdentifier = "Authenticate"
        button.backgroundColor = .ypWhite
        button.layer.cornerRadius = 16
        
        button.setTitle("Войти", for: .normal)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 17)
        button.tintColor = .ypBlack
...
