...
    override var preferredStatusBarStyle: UIStatusBarStyle {
        return .lightContent
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        backButton.accessibilityIdentifier = "NavigationBackButton"
        
        scrollView.minimumZoomScale = 0.1
        scrollView.maximumZoomScale = 1.25
        alertPresenter = AlertPresenter(viewController: self)
        setImage()
    }
...
